Fix newInstance()-related deprecation warnings
Class.newInstance() is deprecated because it directly throws any
exceptions generated by the constructor, including ones that are
supposed to be checked, without wrapping them, which is quite evil.
Happily, the replacement isn’t too bad at all.

With this, all javac warnings are gone, making ./compile.sh completely
silent.